# DHish

./: .gitignore  CLAUDE.md  README.md  config.py  daggerheart.py  daggerheart_mechanics_reference.md  pyproject.toml  requirements-dev.txt  requirements.txt
campaign/: adversary.py  character.py  encounter.py  generators.py  journal.py  npc.py  party.py  state.py  world.py
docs/superpowers/plans/: 2026-03-21-daggerheart-campaign-tool.md
docs/superpowers/specs/: 2026-03-19-daggerheart-campaign-tool-design.md
engine/: agent.py  dice.py  session.py  skill_loader.py
skills/: 01-core-mechanics.md  02-character-creation.md  03-classes.md  04-domains.md  05-combat.md  06-damage-armor.md  07-conditions-death.md  08-adversary-rules.md  09-encounter-building.md  10-campaign-structure.md  11-rest-downtime.md  12-equipment-weapons.md  13-equipment-armor.md  14-gm-moves.md  15-gm-procedures.md  SKILL.md
tests/: test_config.py  test_smoke.py
tests/campaign/: test_adversary.py  test_character.py  test_encounter.py  test_journal.py  test_npc.py  test_party.py  test_state.py  test_world.py
tests/engine/: test_agent.py  test_dice.py  test_session.py  test_skill_loader.py
ui/: terminal.py  web.py
